refactor: migrate debug pages to widget structure for better reusability
This commit refactors the codebase to replace the existing page components for ServerStats, DbStats, and DashboardState with widget components. The pages have been removed and their functionality has been encapsulated within the newly created widgets located in the `widgets` directory. This change promotes better reusability and modularity, allowing these components to be utilized in different contexts, such as within a schema-driven UI.

Significant changes include:
- Removal of the page components in favor of widget components for ServerStats, DbStats, and DashboardState.
- Updated `index.d.ts` and `index.js` to export the new widget components from the `widgets` directory.
- Integration of new API routes for retrieving details of the dashboard state, database statistics, and server statistics, with corresponding type definitions added.
- The feature pack YAML configuration has also been updated to reflect these changes and ensure proper routing and access control.

Files changed include:
- Removed pages: `DashboardState.tsx`, `DbStats.tsx`, `ServerStats.tsx`, `UiSpecsList.tsx`, `UiSpecsDetail.tsx`, and `index.ts`
- Added widget files: `DashboardState.tsx`, `DbStats.tsx`, `ServerStats.tsx`, `UiSpecDetailWidget.tsx`
- Updated API definitions and logic in `server/api/` and `server/lib/` directories.
- Modified `feature

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -7,30 +7,20 @@ description: Debug utilities for system administrators (server stats, database s
 # ─────────────────────────────────────────────────────────────────────────────
 routes:
   - path: /admin/debug/server-stats
-    page: ServerStats
-    roles: []
-    default_roles_allow: [admin]
-    authz: { entity: debug, verb: read, require_action: debug-core.server-stats.access, show_pages: true }
+    page: EntityList
+    params: { entityKey: debug.serverStats }
   - path: /admin/debug/db-stats
-    page: DbStats
-    roles: []
-    default_roles_allow: [admin]
-    authz: { entity: debug, verb: read, require_action: debug-core.db-stats.access, show_pages: true }
+    page: EntityList
+    params: { entityKey: debug.dbStats }
   - path: /admin/debug/dashboard-state
-    page: DashboardState
-    roles: []
-    default_roles_allow: [admin]
-    authz: { entity: debug, verb: read, require_action: debug-core.dashboard-state.access, show_pages: true }
+    page: EntityList
+    params: { entityKey: debug.dashboardState }
   - path: /admin/debug/ui-specs
-    page: UiSpecsList
-    roles: []
-    default_roles_allow: [admin]
-    authz: { entity: debug, verb: read, require_action: debug-core.ui-specs.access, show_pages: true }
+    page: EntityList
+    params: { entityKey: debug.uiSpec }
   - path: /admin/debug/ui-specs/[entityKey]
-    page: UiSpecsDetail
-    roles: []
-    default_roles_allow: [admin]
-    authz: { entity: debug, verb: read, require_action: debug-core.ui-specs.detail.access, show_pages: true }
+    page: EntityDetail
+    params: { entityKey: debug.uiSpec }
 
 # ─────────────────────────────────────────────────────────────────────────────
 # NAV - Navigation entries
@@ -82,14 +72,34 @@ api:
       methods: [GET]
       handler: "@hit/feature-pack-debug-core/server/api/server-stats"
       description: "Get server statistics (memory, CPU, disk, cgroup info). Admin only."
+    - path: /api/debug/server-stats/[id]
+      methods: [GET]
+      handler: "@hit/feature-pack-debug-core/server/api/server-stats-id"
+      description: "Get server statistics by id (alias for server stats). Admin only."
     - path: /api/debug/db-stats
       methods: [GET]
       handler: "@hit/feature-pack-debug-core/server/api/db-stats"
       description: "Get database statistics (table sizes, row counts, indexes). Admin only."
+    - path: /api/debug/db-stats/[id]
+      methods: [GET]
+      handler: "@hit/feature-pack-debug-core/server/api/db-stats-id"
+      description: "Get database statistics by id (alias for db stats). Admin only."
     - path: /api/debug/dashboard-state
       methods: [GET]
       handler: "@hit/feature-pack-debug-core/server/api/dashboard-state"
       description: "Get dashboard state debug info. Admin only."
+    - path: /api/debug/dashboard-state/[id]
+      methods: [GET]
+      handler: "@hit/feature-pack-debug-core/server/api/dashboard-state-id"
+      description: "Get dashboard state by id (alias for dashboard state). Admin only."
+    - path: /api/debug/ui-specs
+      methods: [GET]
+      handler: "@hit/feature-pack-debug-core/server/api/ui-specs"
+      description: "List merged UI specs from /hit-ui-specs.json. Admin only."
+    - path: /api/debug/ui-specs/[id]
+      methods: [GET]
+      handler: "@hit/feature-pack-debug-core/server/api/ui-specs-id"
+      description: "Get a UI spec by entity key (from /hit-ui-specs.json). Admin only."
 
 # ─────────────────────────────────────────────────────────────────────────────
 # PERMISSIONS - Action definitions (for admin-core permissions UI + runtime checks)
