--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hit/feature-pack-debug-core",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "Debug utilities for system administrators",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,12 +13,12 @@
       "require": "./dist/index.js",
       "default": "./dist/index.js"
     },
-    "./pages/*": {
-      "development": "./src/pages/*.tsx",
-      "types": "./dist/pages/*.d.ts",
-      "import": "./dist/pages/*.js",
-      "require": "./dist/pages/*.js",
-      "default": "./dist/pages/*.js"
+    "./contrib": {
+      "development": "./src/contrib/index.tsx",
+      "types": "./dist/contrib/index.d.ts",
+      "import": "./dist/contrib/index.js",
+      "require": "./dist/contrib/index.js",
+      "default": "./dist/contrib/index.js"
     },
     "./server/api/*": {
       "development": "./src/server/api/*.ts",
