--- a/schema/entities/debug.uiSpec.yaml
+++ b/schema/entities/debug.uiSpec.yaml
@@ -84,15 +84,15 @@ entities:
 
     # Canonical fields map (virtual entity; all fields are derived from /hit-ui-specs.json).
     fields:
-      entityKey: { type: text, label: Entity, virtual: true }
-      tableId: { type: text, label: tableId, virtual: true }
-      drizzleTable: { type: text, label: drizzleTable, virtual: true }
-      listColumnCount: { type: number, label: "# list cols", virtual: true }
-      fieldCount: { type: number, label: "# fields", virtual: true }
-      formSectionCount: { type: number, label: "# form sections", virtual: true }
-      relationCount: { type: number, label: "# relations", virtual: true }
-      headerActionCount: { type: number, label: "# header actions", virtual: true }
-      detailExtrasCount: { type: number, label: "# detail extras", virtual: true }
+      entityKey: { type: text, label: Entity }
+      tableId: { type: text, label: tableId }
+      drizzleTable: { type: text, label: drizzleTable }
+      listColumnCount: { type: number, label: "# list cols" }
+      fieldCount: { type: number, label: "# fields" }
+      formSectionCount: { type: number, label: "# form sections" }
+      relationCount: { type: number, label: "# relations" }
+      headerActionCount: { type: number, label: "# header actions" }
+      detailExtrasCount: { type: number, label: "# detail extras" }
 
     detail:
       summaryFields:
